WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202870
REGRESSION (
r244239
) Layout Test fast/canvas/canvas-too-large-to-draw.html is failing
https://bugs.webkit.org/show_bug.cgi?id=202870
Summary
REGRESSION (r244239) Layout Test fast/canvas/canvas-too-large-to-draw.html is...
Dean Jackson
Reported
2019-10-11 16:47:59 PDT
REGRESSION (
r244239
) Layout Test fast/canvas/canvas-too-large-to-draw.html is failing
Attachments
Patch
(10.08 KB, patch)
2019-10-11 16:50 PDT
,
Dean Jackson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2019-10-11 16:48:15 PDT
rdar://51862629
Dean Jackson
Comment 2
2019-10-11 16:50:51 PDT
Created
attachment 380802
[details]
Patch
Simon Fraser (smfr)
Comment 3
2019-10-11 17:01:43 PDT
Comment on
attachment 380802
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=380802&action=review
> Source/WebCore/html/HTMLCanvasElement.h:155 > + WEBCORE_EXPORT static void setMaxPixelMemoryForTesting(unsigned);
Maybe use a size_t here?
Dean Jackson
Comment 4
2019-10-11 17:21:18 PDT
Committed
r251032
: <
https://trac.webkit.org/changeset/251032
>
Truitt Savell
Comment 5
2019-10-14 09:30:39 PDT
It looks like the changes in this patch
https://trac.webkit.org/changeset/251032/webkit
broke 2 tests and did not fix fast/canvas/canvas-too-large-to-draw.html fast/canvas/canvas-transform-identity.html fast/canvas/canvas-transform-infinity.html These all appear to be due to extra console messages. History:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Fcanvas%2Fcanvas-too-large-to-draw.html%20fast%2Fcanvas%2Fcanvas-transform-identity.html%20fast%2Fcanvas%2Fcanvas-transform-infinity.html
Diffs:
https://build.webkit.org/results/Apple%20Mojave%20Release%20WK2%20(Tests)/r251071%20(7363)/fast/canvas/canvas-too-large-to-draw-diff.txt
https://build.webkit.org/results/Apple%20Mojave%20Release%20WK2%20(Tests)/r251071%20(7363)/fast/canvas/canvas-transform-identity-diff.txt
https://build.webkit.org/results/Apple%20Mojave%20Release%20WK2%20(Tests)/r251071%20(7363)/fast/canvas/canvas-transform-infinity-diff.txt
Dean Jackson
Comment 6
2019-10-14 14:05:59 PDT
Tests fixed in
r251094
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug