REGRESSION (r244239) Layout Test fast/canvas/canvas-too-large-to-draw.html is failing https://bugs.webkit.org/show_bug.cgi?id=202870 Source/WebCore:

Reviewed by Simon Fraser.

Add an internal method to specify a fake limit of canvas pixel memory
so our tests produce reproducible results.

* html/HTMLCanvasElement.cpp:
(WebCore::maxActivePixelMemory):
(WebCore::HTMLCanvasElement::setMaxPixelMemoryForTesting):
* html/HTMLCanvasElement.h:
* testing/Internals.cpp:
(WebCore::Internals::setMaxCanvasPixelMemory):
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:

<rdar://51862629>

Reviewed by Simon Fraser.

The output from this test depends on the amount of RAM on the system, so
modify it to specify a limit for testing which will give reproducible results.

* fast/canvas/canvas-too-large-to-draw-expected.txt:
* fast/canvas/canvas-too-large-to-draw.html:
* platform/ios/fast/canvas/canvas-too-large-to-draw-expected.txt: Removed.
* platform/ipad/TestExpectations:

Canonical link: https://commits.webkit.org/216322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251032 268f45cc-cd09-0410-ab3c-d52691b4dbfc